app/assets/stylesheets/bootstrap_and_overrides.css.less
/* ... */
.no-gradient {
	background-color: transparent;
	background: none;
}

.box {
	background-color: @boxBackgroundColour;
	padding: 1.5em 2em;
	margin: 2em 0 2em 0;
	border-radius: 5px;
}

.factbox {
	.box;
	width: 30%;
	margin: 0;
}

.factbox p {
	margin-bottom: 0;
}

.factbox p + p {
	margin-top: 1em;
}

.factbox.pull-left {
	margin-right: 1.5em;
	margin-bottom: 1em
}

.factbox.pull-right {
	margin-left: 1.5em;
	margin-bottom: 1em;
}

.author-note {
	font-size: 0.9em;
	color: @gray;
}

.article-favourite {
	font-size: 1.0em;
	min-width: 12px;
}

.article-favourite, .ios-issue-page, .page-header .ios-issue-page {
	margin: 2px 10px 5px 0;
}

.article-title .ios-issue-page, .end-of-article-social-sharing .ios-issue-page {
	margin-left: 0.5em;
}

.issue-title .article-favourite {
	color: @gray;
	opacity: 0.6;
	// font-size: 0.8em;
}

.issue-title .article-favourite:hover {
	opacity: 1.0;
}

.issue-title .share-links {
	margin-top: 0.5em;
}

.clear-hack {
	display: none;
}

.star-ratings-previous-year, .star-ratings-previous-year + dd {
	color: @gray-light;
	margin-top: -7px;
	margin-bottom: 20px;
}

ul.ui-autocomplete {
	position: absolute;
	list-style: none;
	margin: 0;
	padding: 0;
	border: solid 1px #999;
	cursor: default;
	li {
		background-color: #FFF;
		border-top: solid 1px #DDD;
		margin: 0;
		padding: 0;
	a {
		color: #000;
		display: block;
		padding: 3px;
	}
	a:hover, a:active {
		background-color: #0081C2;
	}
	}
}

.end-of-article-social-sharing {
	border-top: 1px dashed #e5e5e5;
	padding-top: 1em;
	margin-top: 2em;
}

.related-articles {
	border-top: 1px dashed #e5e5e5;
	padding: 1em;
	margin: 1em 0 -1.5em 0;
	border-radius: 5px;
}

.article-previous {
	float: left;
	max-width: 40%;
	margin-left: 20px;
}

.article-next {
	float: right;
	max-width: 40%;
	text-align: right;
	margin-right: 20px;
}

.article-previous i {
	margin: 0 5px 0 -20px;
}

.article-next i {
	float: right;
	margin: 5px -20px 0 8px;
}

.article-related-by-theme {
	margin-top: 2em;
}

.article-related-by-theme h4 {
	color: @gray;
}

#generate_from_source {
	margin-bottom: 1em;
}

.red {
	color: @niRed;
}


// PAGE styling (About, Help etc)

.help-list {
	.box;
	.gradient-gray;
}

.help-body img {
	float: right;
	.shadow;
	margin: 0px 0px 1em 1em;
}

.quick-help {
	float:right;
	.box;
	margin-top: 0px;
}

.subscription-offer {
	border-radius: 5px;
	padding: 1em;
	margin-bottom: @grid-gutter-width;
	background-color: @gray-lighter;
	.gradient-gray;
}

.subscription-offer .label {
	background-color: @gray;
	margin-left: -1.35em;
	border-radius: 0 .25em .25em 0;
	text-transform: uppercase;
	font-weight: normal;
	letter-spacing: 0.1em;
	padding-top: 0.3em;
}

.subscription-offer h4 {
	font-size: 1.4em;
	margin-top: 0px;
	line-height: 1.3em;
}

.subscription-offer img {
	margin-bottom: 1em;
	width: 100%;
}

.subscription-buy-button {
	float: right;
}

.subscription-top-image {
	margin: 0 auto 20px auto;
	text-align: center;
}

.subscription-offer-list {
	font-size: 1.2em;
	width: 80%;
	margin: 0 auto 2em auto;
}

.subscription-offer-list li {
	margin-bottom: 1em;
	line-height: 1.5em;
	font-weight: bold;
}

.subscription-offer-list li span {
	font-weight: normal;
}

.subscribe-current-issue {
	float: right;
	margin: 0 0 1em 2em;
	max-width: 30%;
	.shadow;
}

.special-offer {
	text-align: center;
	margin-bottom: 2em;
	min-height: 265px;
}

.privacy-policy {
	margin: 1em 0 1em 0;
}

.mobile-apps-page {
	text-align: center;
}

.mobile-apps-page > img {
	margin-left: auto;
	margin-right: auto;
}

.page-body .home-cover-list {
	text-align: center;
}

.page-body .new-image-caption, .page-body .new-image-credit {
	max-width: 100%;
}


// 404 error page styling

.fourohfour {
	background-color: #f5f5f5;
}

#error {
	width: 30%;
	min-width: 300px;
	margin: 1em auto 1em auto;
}

#error .brand {
	font-family: "Bodega";
	color: @niRed;
	font-size: 26px;
}



// Admin Settings

.admin-settings {
	margin-top: 2em;
}

.admin-settings label {
	font-size: 1.3em;
	font-weight: bold;
	color: @gray;
	padding-bottom: 1em;
	padding-right: 1em;
}


// Sign-up page

.session-button {
	margin-top: 30px;
}



//=============
// @media fixes
//=============

/* Portrait phones */
@media (max-width: 360px) {

	.navbar .brand {
		font-size: 22px;
	}

	.article-thumb {
		float: none;
		margin-left: 0px;
		clear: right;
	}
	.clear-hack {
		display: block;
		margin-top: 10px;
	}
	.factbox {
		width: inherit;
		margin: inherit;
		margin-bottom: 1em;
		padding: 1em;
	}
	.factbox.pull-left {
		margin-right: inherit;
	}
	.factbox.pull-right {
		margin-left: inherit;
	}
}

/* Portrait phones including iPhone 6 */
@media (max-width: 375px) {
	input, textarea, .uneditable-input {
		width: 95%;
	}
	a.btn.btn-success.navbar-btn .nav-username {
		display: none;
	}

	.sign-in > span, .sign-up > span {
		display: none;
	}

	.sign-in:after {
		.font-awesome-family;
		content: "\f090";
	}

	.sign-up:after {
		.font-awesome-family;
		content: "\f055";
	}
}

/* Landscape phones */
@media (max-width: 480px) {
	.user_nav {
		// position: relative;
		// top: 0px;
	}
	.article-image {
		width: 100%;
	}

	.article-image-small {
		width: 150px;
	}

	.article-image-centre.article-image-small {
		width: 100%;
	}
	
	.hero-unit {
		padding: 10px 20px 20px 20px;
	}
	
	.quick-help {
		float: none;
		width: auto;
	}
	
	.marketing-subscribe {
		float: none;
		margin-top: 20px;
		width: auto;
	}
	.dl-horizontal dt {
		float: left;
		margin-right: 10px;
	}
	.dl-horizontal dd {
		margin-top: 2px;
	}
	.star-ratings-previous-year + dd {
		margin-top: -7px;
	}
	.form-search .btn {
		width: 100%;
		margin-top: 1em;
	}
	.issue-cover-list {
		margin-top: 2em;
	}
	.issue-cover-list .issue-information, .home-cover-list img {
		width: 42%;
		height: auto;
	}
	.issue-cover-list .issue-information img {
		width: 100%;
	}
	.issue-article.keynote .issue-cover {
		width: 45%;
	}
}
/* ... */

